objects/TestAccount__c.object
<CustomObject>
    <fields>
        <fullName>Account_Category__c</fullName>
        <label>Account Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Location__c</fullName>
        <label>Account Location</label>
        <length>51</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_No__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Account No</label>
        <type>AutoNumber</type>
    </fields>
    <label>TestAccount</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TestAccount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestAccounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>